# Calories_Counter_Project

./: .env.exemple  .gitignore  COMPREHENSIVE_TEST_REPORT.md  NEW_TESTS_SUMMARY.md  README.md  manage.py  pyproject.toml  requirements.txt  utils.py
Calories_Counter_Project/: asgi.py  settings.py  urls.py  wsgi.py
count_calories_app/: apps.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
count_calories_app/migrations/: 0001_initial.py  0002_exercise_weight_workoutsession_workoutexercise.py  0003_runningsession.py  0004_workouttable.py  0005_alter_fooditem_calories.py  0006_fooditem_hide_from_quick_list.py  0007_alter_fooditem_calories.py  0008_bodymeasurement.py  0009_remove_bodymeasurement_biceps_and_more.py  0010_weight_height.py  0011_userprofile_remove_weight_height.py  0012_apikey_delete_userprofile.py  0013_remove_apikey.py  0014_usersettings.py  0015_usersettings_fitness_goal_and_more.py  0016_alter_usersettings_fitness_goal.py  0017_mealtemplate_mealtemplateitem.py
count_calories_app/tests/: __init__.py  test_analytics.py  test_analytics_calculations.py  test_api_endpoints.py  test_bug_fixes.py  test_error_handling.py  test_forms.py  test_models.py  test_month_compare.py  test_react_api_parity.py  test_services.py  test_user_settings.py  test_utilities.py  test_views.py  test_workout_exercise_crud.py
frontend/: tailwind.config.js  vite.config.js  vitest.config.js
frontend/src/: App.jsx  index.css
static/css/: style.css
static/react/: index.html
templates/: base.html
templates/includes/: footer.html  navbar.html
(+136 files in other folders)
