[project]
name = "calories-counter-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "django-cors-headers>=4.9.0",
    "google-generativeai>=0.8.0",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "python-decouple>=3.8",
]
